Embeds Ruby expression within View

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
+<h1>"My name is <%= ["Mr Meeseeks", "Jerry", "Mr Needful"].sample%>"</h1>
 "<div style='border: 3px dashed red'>
 <img src='http://4.bp.blogspot.com/-NZ0AG7EvydY/VpkbubImaiI/AAAAAAAA_XM/hxAOv6McOYM/s1600/Cryptozoic%2BEntertainment%2BRick%2Band%2BMorty%2BMr%2BMeeseeks%2BBox%2BO%2BFun%2BDice%2BGame.png'><p>'HI! I'M MR MEESEEKS! LOOK AT ME!'</p>
 </div>"
